media-downloaders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-downloaders
spec:
  selector:
    matchLabels:
      app: media-downloaders
  template:
    metadata:
      labels:
        app: media-downloaders
    spec:
      volumes:
      - name: media-pv-storage
        persistentVolumeClaim:
          claimName: media-pv-claim
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent
        ports:
        - containerPort: 8080
          name: qbit-webui
        # - containerPort: 6881
        #   name: qbit-xfer
        volumeMounts:
        - mountPath: "/config"
          name: media-pv-storage
          subPath: qbittorrent
      - name: sabnzbd
        image: linuxserver/sabnzbd
        ports:
          - containerPort: 8080
            name: sab-webui-http
          # - containerPort: 9090
          #   name: sab-webui-https
        volumeMounts:
        - mountPath: "/config"
          name: media-pv-storage
          subPath: sabnzbd
