media-downloaders-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-downloaders-svc
  labels:
    app: media-downloaders
spec:
  selector:
    app: media-downloaders
  ports:
  - name: qbit-webui
    port: 8080
    protocol: TCP
    targetPort: qbit-webui
  - name: sab-webui-http
    port: 8081
    protocol: TCP
    targetPort: sab-webui-http
