media-playing-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: media-player
  labels:
    app: media-player
spec:
  type: NodePort
  selector:
    app: media-player
  ports:
    - port: 80
      targetPort: tautulli
      protocol: TCP
